tinycss changelog
=================


Version 0.2
-----------

Not released yet.

**Breaking changes:**

* Remove the ``selectors3`` module. The functionality has moved to the
  `cssselect <http://packages.python.org/cssselect/>`_ project.


Version 0.1.1
-------------

Released on 2012-04-06.

Bug fixes:

* Error handling on exepected end of stylesheet in an at-rule head
* Fix the installation on ASCII-only locales


Version 0.1
-----------

Released on 2012-04-05.

First release. Parser support for CSS 2.1, Seloctors 3, Color 3 and
Paged Media 3.